[gd_scene load_steps=12 format=3 uid="uid://bkqgm12tie6br"]

[ext_resource type="Script" uid="uid://rm3ejcft5tb8" path="res://argo/argo.gd" id="1_1th8m"]
[ext_resource type="Texture2D" uid="uid://7k150sh0w4yj" path="res://argo/argo.png" id="1_23iny"]
[ext_resource type="PackedScene" uid="uid://44g3nqpsueeg" path="res://components/interactable/interactable.tscn" id="3_vgtj0"]
[ext_resource type="PackedScene" uid="uid://csf0beklm550h" path="res://components/spawn_point/spawn_point.tscn" id="4_7w5ae"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_23iny"]
radius = 16.0
height = 84.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sm076"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lwlk0"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_goyq5"]
radius = 9.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iguiw"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j4aua"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6c8hy"]
radius = 7.0

[node name="Argo" type="CharacterBody2D"]
z_index = 8
collision_layer = 4
collision_mask = 2
floor_stop_on_slope = false
floor_constant_speed = true
script = ExtResource("1_1th8m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.5, -3.5)
texture = ExtResource("1_23iny")

[node name="InteractionBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_23iny")

[node name="SpawnPoint" parent="." instance=ExtResource("4_7w5ae")]

[node name="Interactable" parent="." node_paths=PackedStringArray("interaction_box") instance=ExtResource("3_vgtj0")]
interaction_box = NodePath("../InteractionBox")

[node name="CollisionShapeBody1" type="CollisionShape2D" parent="."]
position = Vector2(-28, 0)
rotation = 3.1415927
shape = SubResource("CircleShape2D_sm076")

[node name="CollisionShapeBody2" type="CollisionShape2D" parent="."]
position = Vector2(-18, 0)
rotation = 3.1415927
shape = SubResource("CircleShape2D_lwlk0")

[node name="CollisionShapeBody3" type="CollisionShape2D" parent="."]
rotation = 1.5707963
shape = SubResource("CapsuleShape2D_goyq5")

[node name="CollisionShapeBody4" type="CollisionShape2D" parent="."]
position = Vector2(18, 0)
rotation = 3.1415927
shape = SubResource("CircleShape2D_iguiw")

[node name="CollisionShapeBody5" type="CollisionShape2D" parent="."]
position = Vector2(28, 0)
rotation = 3.1415927
shape = SubResource("CircleShape2D_j4aua")

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
rotation = -3.1415925
shape = SubResource("CircleShape2D_6c8hy")

[connection signal="just_interacted" from="Interactable" to="." method="_on_interactable_just_interacted"]
